--- a/build.gradle
+++ b/build.gradle
@@ -16,31 +16,22 @@ repositories {
 
 ext {
     mapstructVersion = '1.4.2.Final'
-//    camelVersion = '3.6.0'
-    springCloudVersion = '2021.0.4'
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-    }
-}
 dependencies {
 
     //spring
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation "org.springframework.boot:spring-boot-starter-web"
-    implementation "org.springframework.boot:spring-boot-starter-actuator"
     //db
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    //security
-//    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.2.13.RELEASE'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //postgres driver
+    implementation 'org.postgresql:postgresql:42.3.1'
 
     implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
     implementation group: 'org.json', name: 'json', version: '20231013'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
     implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
