--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,14 @@ dependencies {
 
     //spring
     implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-validation"
     //db
 //    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     //postgres driver
     implementation 'org.postgresql:postgresql:42.3.1'
+
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 
     implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
     implementation group: 'org.json', name: 'json', version: '20231013'
