--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,12 +1,12 @@
 spring:
     datasource:
         driver-class-name: org.postgresql.Driver
-        url: jdbc:postgresql://localhost:31672/postgres
+        url: jdbc:postgresql://18.143.46.88:31672/postgres
         username: admin
-        password: admin
+        password: m9NUOgb7xi6M3TKjstcHPXSF8EosmcJC
 
     jpa:
-        properties:
-            hibernate:
-                format_sql: 'true'
+#        properties:
+#            hibernate:
+#                format_sql: 'true'
         show-sql: 'true'
